# numpy_cpp_tensorflow_cuda_speed_comparison

./: CMakeLists.txt  gputest.py  main.cu  make.sh
src/: fdtd.h  fdtdwrapper.cu  main.cpp  main.cu
